# d3LLM

./: .gitignore  README.md  requirements.txt
AUP_leaderboard/: README.md  aup_utils.py  data_dream.yaml  data_dream_coder.yaml  data_llada.yaml  main.py  plot_aup_illustration.py  plot_histogram.py  plot_lines.py  plot_radar.py  plot_speed_accuracy.py
baseline/Fast_dLLM_v1/dream/: demo_multiturn_chat.py  eval.py
baseline/Fast_dLLM_v1/llada/: eval_llada.py
chat/: chat_d3llm_dream.py  chat_d3llm_llada.py
d3llm/d3llm_DREAM/: d3llm_dream_generate_util.py
d3llm/d3llm_DREAM/distill_1_data_prepare/: analysis.ipynb  d3llm_dream_generate_multinode.py  d3llm_dream_generate_partly.py  merge.low_mem.py  (+4 more)
d3llm/d3llm_LLaDA/: d3llm_llada_generate_util.py
eval_scripts/: README.md  dream-coder.sh  dream_gsm8k_cot.sh  dream_humaneval.sh  dream_long_gsm8k.sh  dream_math.sh  dream_mbpp.sh  llada_gsm8k_cot.sh  llada_humaneval.sh  llada_long_gsm8k.sh  llada_math.sh  llada_mbpp.sh  new_gsm8k.sh
utils/lm-evaluation-harness/: README.md
utils/serve/: test_question.txt
utils/utils_DreamCoder/code_eval/evalplus/: .dockerignore  .gitignore  analyze.ipynb  eval.sh  eval_baselines.sh  eval_mbpp.sh  prepare_eval_prompts.py  prepare_instruct_prompts.py  prepare_simple_prompts.py  pyproject.toml  tmp.py
utils/utils_DreamCoder/code_eval/evalplus/evalplus/: codegen.py
utils/utils_DreamCoder/code_eval/evalplus/evalplus/eval/: __init__.py  utils.py
utils/utils_DreamCoder/code_eval/evalplus/evalplus/provider/: __init__.py  dllm.py  hf.py  openai.py
utils/utils_LLaDA/: eval_d2f.py  eval_llada.py  generate.py  postprocess_code_mbpp.py
(+130 files in other folders)
